# pygalileo

./: .gitignore  .travis.yml  README.md  pyGalileo.sln
pyGalileo/: CMakeLists.txt  GalileoWrapper.cpp  GalileoWrapper.h  pyGalileo.cpp  pyGalileo.vcxproj  pyGalileo.vcxproj.filters  stdafx.cpp
pyGalileo/python/: galileo_test.py
